# container_measurement

./: .dockerignore  .gitignore  Dockerfile  conanfile.py  main.cpp  meson.build
filters/: blur.kernel  gauss.kernel  r8.kernel  sharp.kernel  sobel.kernel
scripts/: .dockerignore  client.py  content.py  glances_server.sh  perf_server.sh  run.py  runner.sh  server.py
src/: binary.py  client.py  convolution.py  main.cpp  request.py  server.py
test/: multi_threaded_load.py  single_threaded_load.py
